change color of card in valuable desk & adding carosel time

--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
           aria-label="Slide 6"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active "  data-bs-interval="3000">
           <img src="images/banner-carosel/banner1.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item"  data-bs-interval="3000">
           <img src="images/banner-carosel/banner2.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item"  data-bs-interval="3000">
           <img src="images/banner-carosel/banner3.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item"  data-bs-interval="3000">
           <img src="images/banner-carosel/banner4.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item"  data-bs-interval="3000">
           <img src="images/banner-carosel/banner5.jpeg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item"  data-bs-interval="3000">
           <img src="images/banner-carosel/banner6.jpg" class="d-block w-100" alt="..." />
         </div>
       </div>
