Scuessfully completed up to (our-achievers-work-with) section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto ">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="#carousel">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#our-college">About Us</a>
@@ -105,22 +105,22 @@
           aria-label="Slide 6"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active "  data-bs-interval="3000">
+        <div class="carousel-item active " data-bs-interval="3000">
           <img src="images/banner-carosel/banner1.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item"  data-bs-interval="3000">
+        <div class="carousel-item" data-bs-interval="3000">
           <img src="images/banner-carosel/banner2.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item"  data-bs-interval="3000">
+        <div class="carousel-item" data-bs-interval="3000">
           <img src="images/banner-carosel/banner3.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item"  data-bs-interval="3000">
+        <div class="carousel-item" data-bs-interval="3000">
           <img src="images/banner-carosel/banner4.jpg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item"  data-bs-interval="3000">
+        <div class="carousel-item" data-bs-interval="3000">
           <img src="images/banner-carosel/banner5.jpeg" class="d-block w-100" alt="..." />
         </div>
-        <div class="carousel-item"  data-bs-interval="3000">
+        <div class="carousel-item" data-bs-interval="3000">
           <img src="images/banner-carosel/banner6.jpg" class="d-block w-100" alt="..." />
         </div>
       </div>
@@ -212,7 +212,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 d-flex justify-content-center py-2">
+                <div class="col-12 d-flex justify-content-center py-4">
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/valuable-desk/vice-principal.jpg" class="card-img-top" alt="Vice-principal"
@@ -257,6 +257,154 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+  <!-- Hall-of-fame -->
+  <section id="hall-of-fame" class="nested-grid d-flex justify-content-center align-items-center">
+    <div class="container">
+      <div class="row">
+        <div class="col col-12 col-md-8 order-2 order-md-0  ">
+          <div class="row">
+            <div class="col col-12 col-sm-7">
+              <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                  <div class="card" style="width: 90%">
+                    <div class="d-flex justify-content-center mt-3">
+                      <img src="images/hall-of-fame/asan-14.png" class="card-img-top" alt="secretary"
+                        style="width: 30%; border-radius: 50%" />
+                    </div>
+
+                    <div class="card-body">
+                      <h5 class="card-title">M. Asan</h5>
+                      <h6 class="text-end">-Data Analyst (Google)</h6>
+                      <p class="card-text">
+                        <span>"</span> I got an interest to become a data analyst. I started my journey with my college
+                        and started learning skills related to data analyst from my staffs. After a struggle and hard
+                        work I got placed in a Google as data analyst.
+                        <span>"</span>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 d-flex justify-content-center py-4">
+                  <div class="card" style="width: 90%">
+                    <div class="d-flex justify-content-center mt-3">
+                      <img src="images/hall-of-fame/vinoth-46.png" class="card-img-top" alt="Vice-principal"
+                        style="width: 30%; border-radius: 50%" />
+                    </div>
+
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        S. Vinoth Kumar
+                      </h5>
+                      <h6 class="text-end">-Data Engineer (Amazon)</h6>
+                      <p class="card-text">
+                        <span>"</span> I learned Big Data, AI, ML and Cloud (AWS, Azure, GCP) and so thankful to my
+                        college
+                        for helping to learn this technology and join Amazon as a Full Stack Data Engineer
+
+                        <span>"</span>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center">
+              <div class="card" style="width: 90%">
+                <div class="d-flex justify-content-center mt-3">
+                  <img src="images/hall-of-fame/parvesh-35.png" class="card-img-top" alt="Vice-principal"
+                    style="width: 33%; border-radius: 50%; padding-left:2.5%;" />
+                </div>
+
+                <div class="card-body">
+                  <h5 class="card-title">M. Parvesh Ahamed</h5>
+                  <h6 class="text-end">-FullStack Developer (ZOHO)</h6>
+                  <p class="card-text">
+                    <span>"</span> It was a nice journey with my colege, I learned a lot from web development, wed
+                    design, and programming, and still learning every day to upgrade myself. <span>"</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-12 col-md-4 py-3 py-sm-0 ">
+          <h1 class="text-center">Hall of Fame</h1>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="our-achievers-work-with" class="py-5">
+    <h1 class="text-center pb-4">Our Achievers work with</h1>
+    <div class="companies">
+
+      <div class="row container-fluid">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/boring.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/bun&bradstreet.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+         <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/greendeck.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+         <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/informatica.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/kpmg.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+
+<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/learnyst.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/leventm.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/livspace.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies//mindtree.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/redbus.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/tataiq.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+          <div class="card" style="width: 8rem">
+            <img src="images/companies/zensar.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+      </div>
+
+    </div>
     </div>
   </section>
 </body>
