successfully finished till (our Achievements) section

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                   <h5 class="card-title">M. Parvesh Ahamed</h5>
                   <h6 class="text-end">-FullStack Developer (ZOHO)</h6>
                   <p class="card-text">
-                    <span>"</span> It was a nice journey with my colege, I learned a lot from web development, wed
+                    <span>"</span> It was a nice journey with my college, I learned a lot about web development, wed
                     design, and programming, and still learning every day to upgrade myself. <span>"</span>
                   </p>
                 </div>
@@ -351,48 +351,48 @@
             <img src="images/companies/bun&bradstreet.png" class="card-img-top" alt="..." />
           </div>
         </div>
-         <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/greendeck.png" class="card-img-top" alt="..." />
           </div>
         </div>
-         <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/informatica.png" class="card-img-top" alt="..." />
           </div>
         </div>
-<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/kpmg.png" class="card-img-top" alt="..." />
           </div>
         </div>
 
-<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/learnyst.png" class="card-img-top" alt="..." />
           </div>
         </div>
-<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/leventm.png" class="card-img-top" alt="..." />
           </div>
         </div>
-<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/livspace.png" class="card-img-top" alt="..." />
           </div>
         </div>
-<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies//mindtree.png" class="card-img-top" alt="..." />
           </div>
         </div>
-<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/redbus.png" class="card-img-top" alt="..." />
           </div>
         </div>
-<div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
+        <div class=" col-sm-3 col-6 d-flex justify-content-center py-3">
           <div class="card" style="width: 8rem">
             <img src="images/companies/tataiq.png" class="card-img-top" alt="..." />
           </div>
@@ -405,6 +405,43 @@
       </div>
 
     </div>
+    </div>
+  </section>
+  <section id="our-achievements">
+    <div class="container pb-5">
+      <h1 class="text-center pb-4">Our Achievements</h1>
+      <div>
+        <div class="row ">
+          <div class="col-6 col-sm-3 d-flex justify-content-center">
+            <div>
+              <h1><i class="bi bi-megaphone"></i></h1>
+              <h2>45<span>+</span></h2>
+              <h3>Journals</h3>
+            </div>
+          </div>
+          <div class="col-6 col-sm-3 d-flex justify-content-center">
+            <div>
+              <h1><i class="bi bi-layers"></i></h1>
+              <h2>1800<span>+</span></h2>
+              <h3>Projects</h3>
+            </div>
+          </div>
+            <div class="col-6 col-sm-3 d-flex justify-content-center">
+              <div>
+                <h1><i class="bi bi-journal-check"></i></h1>
+                <h2>51900<span>+</span></h2>
+                <h3>Book Banks</h3>
+              </div>
+            </div>
+            <div class="col-6 col-sm-3 d-flex justify-content-center">
+              <div>
+                <h1><i class="bi bi-book-half"></i></h1>
+                <h2>50<span>+</span></h2>
+                <h3>Magazines</h3>
+              </div>
+            </div>
+        </div>
+      </div>
     </div>
   </section>
 </body>
