--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+  <!-- AOS for animation -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- css -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -43,7 +45,7 @@
               <a class="nav-link active" href="#">Admission</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Placements</a>
+              <a class="nav-link active" href="#our-achievers-work-with">Placements</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -51,7 +53,6 @@
                 Departments
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">All</a></li>
                 <li><a class="dropdown-item" href="#">Under-Graduate (UG)</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -143,7 +144,7 @@
         <div class="col col-12 col-md-6 text-center py-3">
           <h1>Our College</h1>
         </div>
-        <div class="col col-12 col-md-6">
+        <div class="col col-12 col-md-6" data-aos="fade-up">
           <p>
             Ever since the British period the twin towns of Tirunelveli and
             Palayamkottai, intersected by the Perennial River Thamirabarani,
@@ -167,7 +168,7 @@
         <div class="col col-12 col-md-6 text-center py-3 order-md-2">
           <h1>Our Vision</h1>
         </div>
-        <div class="col col-12 col-md-6">
+        <div class="col col-12 col-md-6" data-aos="fade-up">
           <p>
             Sadakathullah Appa College, founded by the Muslim minority
             community, is committed to provide quality higher education to all
@@ -193,7 +194,7 @@
             <div class="col col-12 col-sm-7">
               <div class="row">
                 <div class="col-12 d-flex justify-content-center">
-                  <div class="card" style="width: 90%">
+                  <div class="card" style="width: 90%" data-aos="fade-up">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/valuable-desk/secretary.jpg" class="card-img-top" alt="secretary"
                         style="width: 30%; border-radius: 50%" />
@@ -212,7 +213,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 d-flex justify-content-center py-4">
+                <div class="col-12 d-flex justify-content-center py-4" data-aos="fade-up">
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/valuable-desk/vice-principal.jpg" class="card-img-top" alt="Vice-principal"
@@ -235,7 +236,7 @@
                 </div>
               </div>
             </div>
-            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center">
+            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center" data-aos="fade-left">
               <div class="card" style="width: 90%">
                 <div class="d-flex justify-content-center mt-3">
                   <img src="images/valuable-desk/principal.jpg" class="card-img-top" alt="Vice-principal"
@@ -267,7 +268,7 @@
           <div class="row">
             <div class="col col-12 col-sm-7">
               <div class="row">
-                <div class="col-12 d-flex justify-content-center">
+                <div class="col-12 d-flex justify-content-center" data-aos="fade-up">
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/hall-of-fame/asan-14.png" class="card-img-top" alt="secretary"
@@ -286,7 +287,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 d-flex justify-content-center py-4">
+                <div class="col-12 d-flex justify-content-center py-4" data-aos="fade-up">
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/hall-of-fame/vinoth-46.png" class="card-img-top" alt="Vice-principal"
@@ -310,7 +311,7 @@
                 </div>
               </div>
             </div>
-            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center">
+            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center" data-aos="fade-right">
               <div class="card" style="width: 90%">
                 <div class="d-flex justify-content-center mt-3">
                   <img src="images/hall-of-fame/parvesh-35.png" class="card-img-top" alt="Vice-principal"
@@ -410,8 +411,9 @@
   <section id="our-achievements">
     <div class="container pb-5">
       <h1 class="text-center pb-4">Our Achievements</h1>
-      <div>
-        <div class="row ">
+      <div   data-aos="fade-up"
+    data-aos-offset="100">
+        <div class="row" >
           <div class="col-6 col-sm-3 d-flex justify-content-center">
             <div>
               <h1><i class="bi bi-megaphone"></i></h1>
@@ -426,24 +428,32 @@
               <h3>Projects</h3>
             </div>
           </div>
-            <div class="col-6 col-sm-3 d-flex justify-content-center">
-              <div>
-                <h1><i class="bi bi-journal-check"></i></h1>
-                <h2>51900<span>+</span></h2>
-                <h3>Book Banks</h3>
-              </div>
+          <div class="col-6 col-sm-3 d-flex justify-content-center">
+            <div>
+              <h1><i class="bi bi-journal-check"></i></h1>
+              <h2>51900<span>+</span></h2>
+              <h3>Book Banks</h3>
             </div>
-            <div class="col-6 col-sm-3 d-flex justify-content-center">
-              <div>
-                <h1><i class="bi bi-book-half"></i></h1>
-                <h2>50<span>+</span></h2>
-                <h3>Magazines</h3>
-              </div>
+          </div>
+          <div class="col-6 col-sm-3 d-flex justify-content-center">
+            <div>
+              <h1><i class="bi bi-book-half"></i></h1>
+              <h2>50<span>+</span></h2>
+              <h3>Magazines</h3>
             </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- AOS -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      offset: 140,
+      duration: 1000
+    });
+  </script>
 </body>
 
 </html>
