--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
-  <!-- AOS for animation -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- css -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -144,7 +142,7 @@
         <div class="col col-12 col-md-6 text-center py-3">
           <h1>Our College</h1>
         </div>
-        <div class="col col-12 col-md-6" data-aos="fade-up">
+        <div class="col col-12 col-md-6">
           <p>
             Ever since the British period the twin towns of Tirunelveli and
             Palayamkottai, intersected by the Perennial River Thamirabarani,
@@ -168,7 +166,7 @@
         <div class="col col-12 col-md-6 text-center py-3 order-md-2">
           <h1>Our Vision</h1>
         </div>
-        <div class="col col-12 col-md-6" data-aos="fade-up">
+        <div class="col col-12 col-md-6">
           <p>
             Sadakathullah Appa College, founded by the Muslim minority
             community, is committed to provide quality higher education to all
@@ -194,7 +192,7 @@
             <div class="col col-12 col-sm-7">
               <div class="row">
                 <div class="col-12 d-flex justify-content-center">
-                  <div class="card" style="width: 90%" data-aos="fade-up">
+                  <div class="card" style="width: 90%" >
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/valuable-desk/secretary.jpg" class="card-img-top" alt="secretary"
                         style="width: 30%; border-radius: 50%" />
@@ -213,7 +211,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 d-flex justify-content-center py-4" data-aos="fade-up">
+                <div class="col-12 d-flex justify-content-center py-4" >
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/valuable-desk/vice-principal.jpg" class="card-img-top" alt="Vice-principal"
@@ -236,7 +234,7 @@
                 </div>
               </div>
             </div>
-            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center" data-aos="fade-left">
+            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center">
               <div class="card" style="width: 90%">
                 <div class="d-flex justify-content-center mt-3">
                   <img src="images/valuable-desk/principal.jpg" class="card-img-top" alt="Vice-principal"
@@ -268,10 +266,10 @@
           <div class="row">
             <div class="col col-12 col-sm-7">
               <div class="row">
-                <div class="col-12 d-flex justify-content-center" data-aos="fade-up">
+                <div class="col-12 d-flex justify-content-center" >
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
-                      <img src="images/hall-of-fame/asan-14.png" class="card-img-top" alt="secretary"
+                      <img src="images/hall-of-fame/asan-14.png" class="card-img-top" alt="asan"
                         style="width: 30%; border-radius: 50%" />
                     </div>
 
@@ -287,10 +285,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 d-flex justify-content-center py-4" data-aos="fade-up">
+                <div class="col-12 d-flex justify-content-center py-4" >
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
-                      <img src="images/hall-of-fame/vinoth-46.png" class="card-img-top" alt="Vice-principal"
+                      <img src="images/hall-of-fame/vinoth-46.png" class="card-img-top" alt="vinoth"
                         style="width: 30%; border-radius: 50%" />
                     </div>
 
@@ -311,10 +309,10 @@
                 </div>
               </div>
             </div>
-            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center" data-aos="fade-right">
+            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center" >
               <div class="card" style="width: 90%">
                 <div class="d-flex justify-content-center mt-3">
-                  <img src="images/hall-of-fame/parvesh-35.png" class="card-img-top" alt="Vice-principal"
+                  <img src="images/hall-of-fame/parvesh-35.png" class="card-img-top" alt="parvesh"
                     style="width: 33%; border-radius: 50%; padding-left:2.5%;" />
                 </div>
 
@@ -411,8 +409,7 @@
   <section id="our-achievements">
     <div class="container pb-5">
       <h1 class="text-center pb-4">Our Achievements</h1>
-      <div   data-aos="fade-up"
-    data-aos-offset="100">
+      <div   >
         <div class="row" >
           <div class="col-6 col-sm-3 d-flex justify-content-center">
             <div>
@@ -446,14 +443,7 @@
       </div>
     </div>
   </section>
-  <!-- AOS -->
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      offset: 140,
-      duration: 1000
-    });
-  </script>
+  
 </body>
 
 </html>
