Scuessfully created footer and developer-contact (sections).

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="col col-12 col-sm-7">
               <div class="row">
                 <div class="col-12 d-flex justify-content-center">
-                  <div class="card" style="width: 90%" >
+                  <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/valuable-desk/secretary.jpg" class="card-img-top" alt="secretary"
                         style="width: 30%; border-radius: 50%" />
@@ -211,7 +211,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 d-flex justify-content-center py-4" >
+                <div class="col-12 d-flex justify-content-center py-4">
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/valuable-desk/vice-principal.jpg" class="card-img-top" alt="Vice-principal"
@@ -266,7 +266,7 @@
           <div class="row">
             <div class="col col-12 col-sm-7">
               <div class="row">
-                <div class="col-12 d-flex justify-content-center" >
+                <div class="col-12 d-flex justify-content-center">
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/hall-of-fame/asan-14.png" class="card-img-top" alt="asan"
@@ -285,7 +285,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 d-flex justify-content-center py-4" >
+                <div class="col-12 d-flex justify-content-center py-4">
                   <div class="card" style="width: 90%">
                     <div class="d-flex justify-content-center mt-3">
                       <img src="images/hall-of-fame/vinoth-46.png" class="card-img-top" alt="vinoth"
@@ -309,7 +309,7 @@
                 </div>
               </div>
             </div>
-            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center" >
+            <div class="col col-12 col-sm-5 d-flex justify-content-center align-items-center">
               <div class="card" style="width: 90%">
                 <div class="d-flex justify-content-center mt-3">
                   <img src="images/hall-of-fame/parvesh-35.png" class="card-img-top" alt="parvesh"
@@ -409,8 +409,8 @@
   <section id="our-achievements">
     <div class="container pb-5">
       <h1 class="text-center pb-4">Our Achievements</h1>
-      <div   >
-        <div class="row" >
+      <div>
+        <div class="row">
           <div class="col-6 col-sm-3 d-flex justify-content-center">
             <div>
               <h1><i class="bi bi-megaphone"></i></h1>
@@ -443,7 +443,50 @@
       </div>
     </div>
   </section>
-  
+  <section id="footer">
+    <div  class="container">
+<div class="row image">
+  <div class="col-8 col-sm-7 col-md-4">
+    <img src="images/navbar-brand.png" alt="" srcset="" class="img-fluid logo">
+  </div>
+</div>
+<div class="row icons g-4">
+  <div class="col-12 col-sm-6 ">
+    <div>
+      <h2 class="footer-heading">Connect with Us</h2>
+      <div class="links">
+        <a href="https://www.facebook.com/sadakathullahappacollege" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com/sadakathcollege" target="_blank"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.youtube.com/c/sadakathullahappacollegetirunelveli" target="_blank"><i
+            class="bi bi-youtube"></i></a>
+        <a href="https://www.instagram.com/sadakathullahappacollege" target="_blank"><i class="bi bi-instagram"></i></a>
+
+
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-sm-6 text-end">
+    <div>
+      <h2 class="footer-heading">Contact Us</h2>
+      <div class="links"><a
+          href="https://www.google.com/maps/place/Sadakathullah+Appa+College/@8.7224221,77.7587188,17z/data=!3m1!4b1!4m5!3m4!1s0x3b040de163e52551:0x1c5c59926b1cf203!8m2!3d8.7224221!4d77.7609075"
+          target="_blank"><i class="bi bi-geo-alt"></i></a>
+        <a href="tel:+917003569494" target="_blank"><i class="bi bi-telephone"></i></a>
+        <a href="mailto:sacparvesh@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="#carousel"><i class="bi bi-globe2"></i></a>
+      </div>
+    </div>
+  </div>
+
+</div>
+    </div>
+   
+  </section>
+  <section id="developer-contact">
+    <div class="container-fluid text-center pt-3">
+      <p>Made with love ❤️ from students | 2022 ©. All Rights Reserved. | <a href="sub-html-pages/developer-contact.html">Developers Contact</a> </p>
+    </div>
+  </section>
 </body>
 
 </html>
