--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
             <li class="nav-item">
               <a class="nav-link active" href="#">Admission</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#our-achievers-work-with">Placements</a>
-            </li>
-            <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
               <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Departments
@@ -58,6 +55,10 @@
                 <li><a class="dropdown-item" href="#">Post-Graduate (UG)</a></li>
               </ul>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#our-achievers-work-with">Placements</a>
+            </li>
+        
 
             <li class="nav-item dropdown">
               <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -66,17 +67,28 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Timetable</a></li>
-                <li><a class="dropdown-item" href="#">Hall ticket</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
                 <li><a class="dropdown-item" href="#">Result</a></li>
               </ul>
             </li>
-            </li>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Payments</a>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Students Zone
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Hall ticket</a></li>
+                <li><a class="dropdown-item" href="#">Attendance</a></li>
+
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Payment</a></li>
+
+              </ul>
             </li>
 
 
@@ -444,47 +456,50 @@
     </div>
   </section>
   <section id="footer">
-    <div  class="container">
-<div class="row image">
-  <div class="col-8 col-sm-7 col-md-4">
-    <img src="images/navbar-brand.png" alt="" srcset="" class="img-fluid logo">
-  </div>
-</div>
-<div class="row icons g-4">
-  <div class="col-12 col-sm-6 ">
-    <div>
-      <h2 class="footer-heading">Connect with Us</h2>
-      <div class="links">
-        <a href="https://www.facebook.com/sadakathullahappacollege" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://twitter.com/sadakathcollege" target="_blank"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.youtube.com/c/sadakathullahappacollegetirunelveli" target="_blank"><i
-            class="bi bi-youtube"></i></a>
-        <a href="https://www.instagram.com/sadakathullahappacollege" target="_blank"><i class="bi bi-instagram"></i></a>
+    <div class="container">
+      <div class="row image">
+        <div class="col-8 col-sm-7 col-md-4">
+          <img src="images/navbar-brand.png" alt="" srcset="" class="img-fluid logo">
+        </div>
+      </div>
+      <div class="row icons g-4">
+        <div class="col-12 col-sm-6 ">
+          <div>
+            <h2 class="footer-heading">Connect with Us</h2>
+            <div class="links">
+              <a href="https://www.facebook.com/sadakathullahappacollege" target="_blank"><i
+                  class="bi bi-facebook"></i></a>
+              <a href="https://twitter.com/sadakathcollege" target="_blank"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.youtube.com/c/sadakathullahappacollegetirunelveli" target="_blank"><i
+                  class="bi bi-youtube"></i></a>
+              <a href="https://www.instagram.com/sadakathullahappacollege" target="_blank"><i
+                  class="bi bi-instagram"></i></a>
 
+
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 text-end">
+          <div>
+            <h2 class="footer-heading">Contact Us</h2>
+            <div class="links"><a
+                href="https://www.google.com/maps/place/Sadakathullah+Appa+College/@8.7224221,77.7587188,17z/data=!3m1!4b1!4m5!3m4!1s0x3b040de163e52551:0x1c5c59926b1cf203!8m2!3d8.7224221!4d77.7609075"
+                target="_blank"><i class="bi bi-geo-alt"></i></a>
+              <a href="tel:+917003569494" target="_blank"><i class="bi bi-telephone"></i></a>
+              <a href="mailto:sacparvesh@gmail.com"><i class="bi bi-envelope"></i></a>
+              <a href="#carousel"><i class="bi bi-globe2"></i></a>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
-  </div>
-  <div class="col-12 col-sm-6 text-end">
-    <div>
-      <h2 class="footer-heading">Contact Us</h2>
-      <div class="links"><a
-          href="https://www.google.com/maps/place/Sadakathullah+Appa+College/@8.7224221,77.7587188,17z/data=!3m1!4b1!4m5!3m4!1s0x3b040de163e52551:0x1c5c59926b1cf203!8m2!3d8.7224221!4d77.7609075"
-          target="_blank"><i class="bi bi-geo-alt"></i></a>
-        <a href="tel:+917003569494" target="_blank"><i class="bi bi-telephone"></i></a>
-        <a href="mailto:sacparvesh@gmail.com"><i class="bi bi-envelope"></i></a>
-        <a href="#carousel"><i class="bi bi-globe2"></i></a>
-      </div>
-    </div>
-  </div>
 
-</div>
-    </div>
-   
   </section>
   <section id="developer-contact">
     <div class="container-fluid text-center pt-3">
-      <p>Made with love ❤️ from students | 2022 ©. All Rights Reserved. | <a href="sub-html-pages/developer-behind.html">Developers behind.</a> </p>
+      <p>Made with love ❤️ from students | 2022 ©. All Rights Reserved. | <a
+          href="sub-html-pages/developer-behind.html">Developers behind.</a> </p>
     </div>
   </section>
 </body>
