--- a/sub-html-pages/developer-behind.html
+++ b/sub-html-pages/developer-behind.html
@@ -21,14 +21,14 @@
                         <div class="h-full text-center">
                             <img alt="asan"
                                 class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-blue-300 "
-                                src="/images/developers/ramakrishnan.png">
+                                src="/images/developers-behind/asan.jpg">
                             <p class="leading-relaxed">“Most people make the mistake of thinking design is what it looks
                                 like. People think it's this veneer-that the
                                 designers are handed this box and told, 'Make it look good!' That's not what we think
                                 design is. It's not just what it
                                 looks like and feels like. Design is how it works.”</p>
                             <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
-                            <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">RAMAKRISHNAN
+                            <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">ASAN
                             </h2>
                             <p class="text-gray-500">Senior Product Designer</p>
                         </div>
@@ -37,14 +37,14 @@
                         <div class="h-full text-center">
                             <img alt="vinoth"
                                 class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-blue-200 "
-                                src="/images/developers/kaja.jpg">
+                                src="/images/developers-behind/vinoth.jpg">
                             <p class="leading-relaxed">Good UX design means thinking like a user and providing a clear
                                 pathway to help the user achieve their goals when
                                 interacting with the product.Managing the user experience involves an 8-step design
                                 process. It needs to understand user behavior and
                                 constraints and identify pain points.</p>
                             <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
-                            <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">KAJA UVAIS MOHAMMED</h2>
+                            <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">VINOTH KUMAR</h2>
                             <p class="text-gray-500">UI Develeoper</p>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                         <div class="h-full text-center">
                             <img alt="Parvesh"
                                 class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-blue-200"
-                                src="/images/developers/parvesh.jpg">
+                                src="/images/developers-behind/parvesh.jpg">
                             <p class="leading-relaxed">Back end developers are responsible for creating and maintaining technology at the back end of a website (the server,
                             database and application). The attractive visuals created by designers, UX professionals and front end developers
                             couldn't exist without the technology provided by a back end developer.</p>
