--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="#">Under-Graduate (UG)</a>
+                    <a class="dropdown-item" href="/sub-html-pages/departments/ug.html">Under-Graduate (UG)</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Post-Graduate (UG)</a>
+                    <a class="dropdown-item" href="/sub-html-pages/departments/pg.html">Post-Graduate (PG)</a>
                   </li>
                 </ul>
               </li>
