removing double-quotes from asan

--- a/sub-html-pages/developer-behind.html
+++ b/sub-html-pages/developer-behind.html
@@ -22,11 +22,11 @@
                             <img alt="asan"
                                 class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-blue-300 "
                                 src="/images/developers-behind/asan.jpg">
-                            <p class="leading-relaxed">“Most people make the mistake of thinking design is what it looks
+                            <p class="leading-relaxed">Most people make the mistake of thinking design is what it looks
                                 like. People think it's this veneer-that the
                                 designers are handed this box and told, 'Make it look good!' That's not what we think
                                 design is. It's not just what it
-                                looks like and feels like. Design is how it works.”</p>
+                                looks like and feels like. Design is how it works.</p>
                             <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
                             <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">ASAN
                             </h2>
