--- a/sub-html-pages/departments/ug.html
+++ b/sub-html-pages/departments/ug.html
@@ -19,7 +19,10 @@
       <div
         class="container mx-auto flex p-3 flex-row items-center justify-between"
       >
-        <a class="mb-4 md:mb-0 sm:w-1/4 w-2/5 cursor-pointer" href="../../index.html">
+        <a
+          class="mb-4 md:mb-0 sm:w-1/4 w-2/5 cursor-pointer"
+          href="../../index.html"
+        >
           <img src="../../images/navbar-brand.png" alt="logo" srcset="" />
         </a>
         <nav class="md:ml-auto flex flex-wrap items-center justify-center">
@@ -29,6 +32,7 @@
             >BSc</a
           >
           <a
+            href="#ba"
             class="mr-5 font-bold text-emerald-800 hover:text-violet-700 cursor-pointer tracking-wide"
             >BA</a
           >
@@ -38,8 +42,8 @@
           >
           <a
             class="font-bold text-emerald-800 hover:text-violet-700 cursor-pointer tracking-wide"
-            >BCA </a
-          >
+            >BCA
+          </a>
         </nav>
       </div>
     </header>
@@ -214,6 +218,181 @@
                   technology. We must also leave them a glimpse of the world as
                   it was created, not just as it looked when we got through with
                   it.”
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Arts -->
+    <h1
+      class="ml-5 mt-10 text-indigo-800 sm:text-4xl text-2xl font-bold"
+      id="ba"
+    >
+      Bachelor of Arts | BA
+    </h1>
+
+    <section class="text-gray-600 body-font">
+      <div class="container px-5 py-10 mx-auto">
+        <div class="flex flex-wrap -m-4">
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/economics.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  Economics
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “They (economists) must set aside their contempt for other
+                  disciplines and their absurd claim to greater scientific
+                  legitimacy, despite the fact that they know almost nothing
+                  about anything.”
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/english.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  English
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “Hope the English literature will invent a few more alphabets
+                  to avoid plagiarism. The permutation and combination of 26
+                  alphabets even a human calculator can do, no need for
+                  plagiarism software.”
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/geography.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  Geography
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “But there's no such thing as a completely fresh start.
+                  Everything new arrives on the heels of something old, and
+                  every beginning comes at the cost of an ending.”
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/history.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  History
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “When I despair, I remember that all through history the way
+                  of truth and love have always won. There have been tyrants and
+                  murderers, and for a time, they can seem invincible, but in
+                  the end, they always fall. Think of it--always.”
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/psychology.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  Psychology
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “As a child I felt myself to be alone, and I am still, because
+                  I know things and must hint at things which others apparently
+                  know nothing of, and for the most part do not want to know.”
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/tamil.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  Tamil
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “Semmai only succeeds because of her upright vision, her
+                  morals that fear no one in the land, and her arrogant wisdom ;
+                  drowning and drowning in the unknown, she lives without the
+                  art of reality. Hear the rising cheek of the girl Magumam
+                  speaking !”
                 </p>
               </div>
             </div>
