--- a/sub-html-pages/departments/ug.html
+++ b/sub-html-pages/departments/ug.html
@@ -37,6 +37,7 @@
             >BA</a
           >
           <a
+            href="#bba"
             class="mr-5 font-bold text-emerald-800 hover:text-violet-700 cursor-pointer tracking-wide"
             >BBA</a
           >
@@ -393,6 +394,98 @@
                   drowning and drowning in the unknown, she lives without the
                   art of reality. Hear the rising cheek of the girl Magumam
                   speaking !”
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- BBA -->
+    <h1
+      class="ml-5 mt-10 text-indigo-800 sm:text-4xl text-2xl font-bold"
+      id="bba"
+    >
+      Bachelors of Business Administration | BBA
+    </h1>
+    <section class="text-gray-600 body-font">
+      <div class="container px-5 py-10 mx-auto">
+        <div class="flex flex-wrap -m-4">
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/business-administration.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BBA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  Business Administration
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “The biggest risk is not taking any risk… in a world that is
+                  changing really quickly, the only strategy that is guaranteed
+                  to fail is not taking any risks.”
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/finance.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BBA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  Finance
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  "It is well enough that people of the nation do not understand
+                  our banking and monetary system, for if they did, I believe
+                  there would be a revolution before tomorrow morning.”
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/human-resources.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BBA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  Human Resources
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “Human resources are like natural resources; they're often
+                  buried deep. You have to go looking for them; they're not just
+                  lying around on the surface. You have to create the
+                  circumstances where they show themselves.”
                 </p>
               </div>
             </div>
