--- a/sub-html-pages/departments/ug.html
+++ b/sub-html-pages/departments/ug.html
@@ -42,6 +42,7 @@
             >BBA</a
           >
           <a
+            href="#bca"
             class="font-bold text-emerald-800 hover:text-violet-700 cursor-pointer tracking-wide"
             >BCA
           </a>
@@ -486,6 +487,47 @@
                   buried deep. You have to go looking for them; they're not just
                   lying around on the surface. You have to create the
                   circumstances where they show themselves.”
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- BCA -->
+    <h1
+      class="ml-5 mt-10 text-indigo-800 sm:text-4xl text-2xl font-bold"
+      id="bca"
+    >
+      Bachelors of Computer Applications | BCA
+    </h1>
+    <section class="text-gray-600 body-font">
+      <div class="container px-5 py-10 mx-auto">
+        <div class="flex flex-wrap -m-4">
+          <div class="p-6 md:w-1/3">
+            <div
+              class="h-full border-2 hover:border-indigo-300 rounded-lg overflow-hidden"
+            >
+              <img
+                class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="../../images/departments/ug/bca.jpg"
+                alt="blog"
+              />
+              <div class="p-6">
+                <h2
+                  class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"
+                >
+                  BCA
+                </h2>
+                <h1 class="title-font text-2xl font-bold text-indigo-700 mb-3">
+                  computer Applications
+                </h1>
+                <p class="leading-relaxed mb-3">
+                  “Bachelor in Computer Application (BCA) is an undergraduate
+                  degree course in PC applications. The length of the course is
+                  3 years and is separated into 6 semesters. It contains the
+                  subjects like database, organizing, information structure,
+                  center programming dialects like Java and C++. ”
                 </p>
               </div>
             </div>
