changing departments to our-courses in homepage's nav-bar

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Departments
+                  Our-Courses
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="/sub-html-pages/departments/ug.html">Under-Graduate (UG)</a>
+                    <a class="dropdown-item" href="/sub-html-pages/courses/ug.html">Under-Graduate (UG)</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/sub-html-pages/departments/pg.html">Post-Graduate (PG)</a>
+                    <a class="dropdown-item" href="/sub-html-pages/courses/pg.html">Post-Graduate (PG)</a>
                   </li>
                 </ul>
               </li>
