made our app to use public folders

--- a/controllers/index.html
+++ b/controllers/index.html
@@ -28,7 +28,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
@@ -37,7 +37,7 @@
         <div class="container-fluid">
           <a class="navbar-brand">
             <img
-              src="images/navbar-brand.png"
+              src="/images/navbar-brand.png"
               class="img-fluid"
               alt="logo "
               srcset=""
