adding courses to view on backend

--- a/controllers/index.html
+++ b/controllers/index.html
@@ -77,13 +77,13 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="/sub-html-pages/courses/ug.html">Under-Graduate (UG)</a>
+                    <a class="dropdown-item" href="/courses/ug.html">Under-Graduate (UG)</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/sub-html-pages/courses/pg.html">Post-Graduate (PG)</a>
+                    <a class="dropdown-item" href="/courses/pg.html">Post-Graduate (PG)</a>
                   </li>
                 </ul>
               </li>
@@ -707,7 +707,7 @@
       <div class="container-fluid text-center pt-3">
         <p>
           Made with love ❤️ from students | 2022 ©. All Rights Reserved. |
-          <a href="sub-html-pages/developer-behind.html">Developers behind.</a>
+          <a href="/developer-behind.html">Developers behind.</a>
         </p>
       </div>
     </section>
