setting up the get route for admission

--- a/controllers/index.html
+++ b/controllers/index.html
@@ -63,7 +63,7 @@
                 <a class="nav-link active" href="#our-college">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Admission</a>
+                <a class="nav-link active" href="/admission">Admission</a>
               </li>
               <li class="nav-item dropdown">
                 <a
