--- a/controllers/index.html
+++ b/controllers/index.html
@@ -124,7 +124,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Hall ticket</a></li>
-                  <li><a class="dropdown-item" href="#">Attendance</a></li>
+                  <li><a class="dropdown-item" href="/attendance">Attendance</a></li>
 
                   <li>
                     <hr class="dropdown-divider" />
