adding GET route  for timetable

--- a/controllers/index.html
+++ b/controllers/index.html
@@ -104,7 +104,7 @@
                   Examination
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Timetable</a></li>
+                  <li><a class="dropdown-item" href="/time-table">Timetable</a></li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
