changing the application option from download to view time-table

--- a/controllers/time-table.html
+++ b/controllers/time-table.html
@@ -22,15 +22,18 @@
   </head>
   <body>
     <div class="p-5">
-      <h1>Click the button to download Exam Time-table : -</h1>
-      <form action="/timetable" method="post" class="mt- d-flex justify-content-end w-75">
+      <h1>Click the button to View Exam Time-table : -</h1>
+      <div class="mt- d-flex justify-content-end w-75">
         <div>
-          <h3 class="p-3">👇</h3>
-          <button type="submit" class="btn btn-outline-success">
-            Download
-          </button>
+          <a
+            href="https://res.cloudinary.com/dmkoxe2gk/image/upload/v1668123934/ikaggeyf3nej2cbtqzi3.jpg"
+            ><button class="btn btn-success mt-5">
+              👀  time-table
+            </button></a
+          >
         </div>
-      </form>
+      </div>
     </div>
+    <script></script>
   </body>
 </html>
