adding some style for time-table page and removing some unwanted codes and folder which is generated for time-table POST route

--- a/controllers/time-table.html
+++ b/controllers/time-table.html
@@ -19,15 +19,24 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <style>
+      h1{
+        color: aliceblue;
+      }
+.p-5{
+  background-color:#157347;
+  border-radius: 15px;
+}
+    </style>
   </head>
   <body>
-    <div class="p-5">
+    <div class="p-5 mt-5 container">
       <h1>Click the button to View Exam Time-table : -</h1>
-      <div class="mt- d-flex justify-content-end w-75">
-        <div>
+      <div class="mt- d-flex justify-content-end container">
+        <div >
           <a
             href="https://res.cloudinary.com/dmkoxe2gk/image/upload/v1668123934/ikaggeyf3nej2cbtqzi3.jpg"
-            ><button class="btn btn-success mt-5">
+            ><button class="btn btn-warning mt-5">
               👀  time-table
             </button></a
           >
