creating form for result

--- a/controllers/index.html
+++ b/controllers/index.html
@@ -77,13 +77,17 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="/courses/ug.html">Under-Graduate (UG)</a>
+                    <a class="dropdown-item" href="/courses/ug.html"
+                      >Under-Graduate (UG)</a
+                    >
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/courses/pg.html">Post-Graduate (PG)</a>
+                    <a class="dropdown-item" href="/courses/pg.html"
+                      >Post-Graduate (PG)</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -104,7 +108,9 @@
                   Examination
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/time-table">Timetable</a></li>
+                  <li>
+                    <a class="dropdown-item" href="/time-table">Timetable</a>
+                  </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
@@ -124,7 +130,9 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Hall ticket</a></li>
-                  <li><a class="dropdown-item" href="/attendance">Attendance</a></li>
+                  <li>
+                    <a class="dropdown-item" href="/attendance">Attendance</a>
+                  </li>
 
                   <li>
                     <hr class="dropdown-divider" />
@@ -424,7 +432,7 @@
                           analyst. I started my journey with my college and
                           started learning skills related to data analyst from
                           my staffs. After a struggle and hard work I got placed
-                          in a Google as data analyst.
+                          as data analyst.
                           <span>"</span>
                         </p>
                       </div>
