initalizion of result POST route

--- a/controllers/index.html
+++ b/controllers/index.html
@@ -114,7 +114,7 @@
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="#">Result</a></li>
+                  <li><a class="dropdown-item" href="/result">Result</a></li>
                 </ul>
               </li>
 
