creating html form for hall-ticket and changing the button color of attendance.html

--- a/controllers/hall-ticket.html
+++ b/controllers/hall-ticket.html
@@ -11,21 +11,23 @@
       href="images/favicon/logo.jpeg"
       type="image/x-icon"
     />
-      <!-- bootstrap -->
-  <!-- CSS only -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-    crossorigin="anonymous"
-  />
+    <!-- bootstrap -->
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
-
   <body>
     <div class="container p-5">
-      <h2>Check the attendance using your Roll-No :</h2>
-      <form action="/attendance" method="post">
-        <div class="row mt-3 p-5" style="background-color:rgb(224, 255, 224); border-radius: 10px;">
+      <h2>Get your Hall-ticket using your Roll-No :-</h2>
+      <form action="/hall-ticket" method="post">
+        <div
+          class="row mt-3 p-5"
+          style="background-color: rgb(224, 255, 224); border-radius: 10px"
+        >
           <div class="col-sm-6">
             <div class="form-floating">
               <input
