creating GET route for hall-tickets

--- a/controllers/index.html
+++ b/controllers/index.html
@@ -129,7 +129,7 @@
                   Students Zone
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Hall ticket</a></li>
+                  <li><a class="dropdown-item" href="/hall-ticket">Hall ticket</a></li>
                   <li>
                     <a class="dropdown-item" href="/attendance">Attendance</a>
                   </li>
